--- a/inventory.ini
+++ b/inventory.ini
@@ -1,12 +1,14 @@
 [app]
-vm2 ansible_host=IP_адрес_вм_2
-vm3 ansible_host=IP_адрес_вм_3
+vm2 ansible_host=10.0.0.10
+vm3 ansible_host=10.0.0.17
 
 [database]
-vm1 ansible_host=IP_адрес_вм_1
-
+vm1 ansible_host=localhost
+[web]
+vm1 ansible_host=localhost
 [all:vars]
-ansible_user=ansible_user_name
-ansible_ssh_private_key_file=/путь/к/вашему/приватному/ключу
+ansible_user=ansible
+ansible_ssh_private_key_file=~/.ssh/id_rsa
 postgres_version=12
-postgres_data_dir=/путь/к/директории/данных/postgres
+postgres_data_dir=/var/lib/postgresql/12/main/
+
