--- a/inventory.ini
+++ b/inventory.ini
@@ -1,14 +1,17 @@
 [app]
-vm2 ansible_host=10.0.0.10
-vm3 ansible_host=10.0.0.17
+vm2 ansible_host=10.0.0.5
+vm3 ansible_host=10.0.0.27
 
 [database]
-vm1 ansible_host=localhost
+vm1 ansible_host=10.0.0.31
+
+[database:vars]
+postgres_data_dir=/var/lib/postgresql/12/main
+postgres_version=12.8
+
 [web]
 vm1 ansible_host=localhost
+
 [all:vars]
 ansible_user=ansible
 ansible_ssh_private_key_file=~/.ssh/id_rsa
-postgres_version=12
-postgres_data_dir=/var/lib/postgresql/12/main/
-
